Change port for swagger preview extension

--- a/templates/home/.config/Code/User/settings.json
+++ b/templates/home/.config/Code/User/settings.json
@@ -31,5 +31,6 @@
     "breadcrumbs.enabled": true,
     "explorer.autoReveal": false,
     "editor.renderControlCharacters": true,
-    "workbench.iconTheme": "vscode-icons"
+    "workbench.iconTheme": "vscode-icons",
+    "swaggerViewer.defaultPort": 62123
 }
