--- a/templates/home/.config/Code/User/settings.json
+++ b/templates/home/.config/Code/User/settings.json
@@ -15,8 +15,8 @@
     "window.zoomLevel": 0,
     "workbench.startupEditor": "newUntitledFile",
     "editor.minimap.enabled": false,
-    "terminal.integrated.fontFamily": "DejaVu Sans Mono",
-    "terminal.integrated.fontSize": 14,
+    "terminal.integrated.fontFamily": "MesloLGS NF",
+    "terminal.integrated.fontSize": 13,
     "explorer.confirmDragAndDrop": false,
     "editor.renderWhitespace": "all",
     "explorer.confirmDelete": false,
